--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.1",
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "eslint": "8.44.0",
-    "eslint-config-next": "13.4.8",
-    "next": "13.4.8",
+    "eslint-config-next": "13.4.0",
+    "next": "13.4.0",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.6"
+    "react-hook-form": "^7.45.1",
+    "typescript": "5.1.6",
+    "sass": "^1.62.1",
+    "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.8"
   }
 }
