--- a/.env.production
+++ b/.env.production
@@ -3,4 +3,5 @@ NEXT_PUBLIC_MOODLE_SERVICE=react-moodle
 NEXT_PUBLIC_MOODLE_WEBSERVICE_URL=https://formacion.easyyeah.com/webservice/rest/server.php
 NEXT_PUBLIC_MOODLE_LOGIN_TOKEN_URL=https://formacion.easyyeah.com/login/token.php
 APP_URL=https://react-moodle.vercel.app
+NEXTAUTH_SECRET=fLpgXmqQ6sE6ZfzuCRyLRZeQQ+n7ydm5CSA5i4qQHPw=
 NEXTAUTH_URL=https://react-moodle.vercel.app
