--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
       "@/*": ["./src/*"],
       "@/components": ["./src/components/*"],
       "@/interfaces": ["./src/interfaces/*"],
+      "@/stylesheets": ["./src/stylesheets/*"],
       "@/api": ["./src/app/api/*"]
     }
   },
