--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
       "@/components": ["./src/components/*"],
       "@/interfaces": ["./src/interfaces/*"],
       "@/stylesheets": ["./src/stylesheets/*"],
+      "@/utils": ["./src/utils/*"],
       "@/api": ["./src/app/api/*"]
     }
   },
